<resources>
    <string name="app_name">"Antibiotic Or Not"</string>

    <!-- Text View Labels -->
    <string name="fever_label_text">Fever</string>
    <string name="cough_label_text">Cough</string>
    <string name="sore_throat_hoarseness_label_text">Sore Throat or Hoarseness</string>
    <string name="white_patches_in_throat_label_text">White Patches In Back of Throat</string>
    <string name="facial_pain_label_text">Facial Pain</string>
    <string name="body_ache_label_text">Body Ache</string>
    <string name="sneezing_label_text">Sneezing</string>
    <string name="nasal_discharge_label_text">Nasal Discharge</string>
    <string name="post_nasal_drip_label_text">Post Nasal Drip</string>
    <string name="chest_pain_label_text">Chest Pain</string>
    <string name="shortness_of_breath_wheezing_label_text">Shortness of Breath or Wheezing</string>
    <string name="neck_stiffness_label_text">Neck Stiffness (inability to touch chin to neck)</string>
    <string name="tender_lymph_nodes">Tender Lymph Nodes</string>
    <string name="headache_label_text">Headache</string>
    <string name="symptoms_time_length_label_text">How long have your symptoms been present?</string>
    <string name="pre_existing_conditions_label_text">Pre-existing Conditions (medical problems)</string>

    <!-- Checkbox Selections Yes or No -->
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Symptoms Time Length -->
    <string name="less_than_seven_days">Less Than or Equal To 7 Days</string>
    <string name="more_than_seven_days">More Than 7 Days</string>

    <!-- Button Strings -->
    <string name="result_button_text">Result</string>
    <string name="start_button_text">Start</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="done_button_text">Done</string>

   <!-- Fever Dialog -->
    <string name="fever_dialog_title_text">Fever Range Selection</string>
    <string name="fever_info_text">Please select the appropriate range for your fever.</string>
    <string name="low_fever_range">Less Than 100.4</string>
    <string name="high_fever_range">Greater Than or Equal 100.4</string>

    <!-- Nasal Discharge Color Dialog -->
    <string name="nasal_discharge_color_dialog_title_text">Nasal Discharge Color</string>
    <string name="nasal_discharge_color_info_text">What color is your nasal discharge?</string>
    <string name="nasal_discharge_color_clear_text">Clear</string>
    <string name="nasal_discharge_color_yellow_green_text">Yellow or Green</string>

    <!-- Pre-existing Conditions Dialog -->
    <string name="pre_existing_conditions_dialog_title_text">Pre-existing Conditions</string>
    <string name="pre_existing_conditions_info_text">Please select any of the pre-existing conditions that apply to you.</string>
    <string name="pregnant_or_two_weeks_postpartum">Pregnant or Two Weeks Postpartum</string>
    <string name="cancer">Active Cancer</string>
    <string name="copd">Chronic Obstructive Pulmonary Disease (COPD)</string>
    <string name="hiv">HIV</string>
    <string name="aids">AIDS</string>
    <string name="recent_use_of_antibiotics">Recent Use Of Antibiotics</string>
    <string name="recent_hospitalization">Recent Hospitalization</string>
    <string name="chronic_steroid_use">Chronic Steroid Use</string>

    <!-- Selection Conformation Dialog -->
    <string name="selection_conformation_info_text">Are you sure the selections you have made are correct?</string>
    <string name="selection_dialog_title_text">Selection Conformation</string>
    <string name="nasal_congestion_label_text">Nasal Congestion</string>

    <!-- Antibiotic Facts Dialog -->
    <!-- Bullet points in front of facts are added in the "MainQuestionnaireActivity.java" in createAntibioticFactDialog() method -->
    <string name="fact_list_title_text">Antibiotic Awareness Facts</string>
    <string name="fact_one">The common cold includes nasal congestion, runny nose (discharge can be clear or yellow-green), sore throat, cough, fatigue, low grade fever, sneezing and headache.</string>
    <string name="fact_two">The common cold lasts from 3-10 days and longer in smokers.</string>
    <string name="fact_three">The common cold is differentiated from viral or allergic nasal inflammation by the presence of sore throat and cough.</string>
    <string name="fact_four">The common cold can be differentiated from bacterial tonsillitis (pharyngitis or tonsil infection) by the presence of runny nose and nasal congestion.</string>
    <string name="fact_five">No antibiotics are needed to treat the common cold.</string>
    <string name="fact_six">Pharyngitis (infection of the throat and glands) symptoms include sore throat, fever, fatigue, swollen neck glands, and with or without white patches in the back of the throat. Usually pharyngitis requires antibiotics.</string>
    <string name="fact_seven">If there is no fever but there is a cough with pharyngitis symptoms, no antibiotics are needed.</string>
    <string name="fact_eight">The common cold can cause and lead to sinusitis, lower respiratory tract infection, asthma exacerbation and ear infections.</string>
    <string name="fact_nine">Acute sinusitis includes symptoms of facial pain, clear or yellow-green nasal discharge, nasal obstruction.</string>
    <string name="fact_ten">The most common cause of acute sinusitis is viral infections. Therefore no antibiotics are recommended unless patient has fever  greater than or equal to 102 or other risk factors.</string>
    <string name="fact_eleven">Acute viral sinusitis is expected to improve within 10 days without the use of antibiotics. Nasal discharge starts clear in viral sinusitis but may turn yellow-green later in the illness.</string>
    <string name="fact_twelve">Acute bacterial sinusitis lasts longer than 10 days, causes high fevers (>102), and nasal discharge is yellow-green within the first 3 days of illness.</string>
    <string name="fact_thirteen">Acute bronchitis includes cough, sputum (mucous from respiratory tract) and lasts at least 5 days. Wheezing and shortness of breath are also symptoms of acute bronchitis.</string>
    <string name="fact_fourteen">Influenza symptoms include high fever, cough, headache, muscle and body aches. Antivirals are recommended to treat influenza.</string>
    <string name="fact_fifteen">Pertussis is similar to the common cold but has prolonged coughing and will require antibiotics.</string>
    <string name="fact_sixteen">The majority of upper respiratory infections are transmitted by hand contact. Viruses remain alive on human skin for 2 hours. Therefore hand washing is important to prevent the spread of disease.</string>
    <string name="fact_seventeen">Antibiotics are not indicated for cold, flu, bronchitis, most coughs, most sore throats, some ear infections, some sinus infections, and stomach flu.</string>
    <string name="fact_eighteen">Unnecessary use of antibiotics creates resistant bacteria/superbugs that are hard to treat and cause approximately 23,000 per year in the U.S.</string>

    <!-- A string array to hold all the facts -->
    <string-array name="fact_array">
        <item>@string/fact_one</item>
        <item>@string/fact_two</item>
        <item>@string/fact_three</item>
        <item>@string/fact_four</item>
        <item>@string/fact_five</item>
        <item>@string/fact_six</item>
        <item>@string/fact_seven</item>
        <item>@string/fact_eight</item>
        <item>@string/fact_nine</item>
        <item>@string/fact_ten</item>
        <item>@string/fact_eleven</item>
        <item>@string/fact_twelve</item>
        <item>@string/fact_thirteen</item>
        <item>@string/fact_fourteen</item>
        <item>@string/fact_fifteen</item>
        <item>@string/fact_sixteen</item>
        <item>@string/fact_seventeen</item>
        <item>@string/fact_eighteen</item>
    </string-array>

    <!-- Over The Counter Remedies Dialog -->
    <string name="remedy_list_title_text">Over The Counter Remedies</string>
    <string name="remedy_1">Analgesics for headache, body aches, muscle and joint aches.</string>
    <string name="remedy_2">A combination product containing an antihistamine and decongestant combination or intranasal/inhalation cromolyn may help with nasal symptoms.</string>
    <string name="remedy_3">Application of topical saline to nasal cavity will temporarily help with nasal congestion.</string>
    <string name="remedy_4">Cough may be treated with dextromethorphan.</string>
    <string name="remedy_5">Stay well hydrated and ingest warm fluids.</string>
    <string name="remedy_button_text">OTC Remedies</string>

    <string-array name="remedy_array">
        <item>@string/remedy_1</item>
        <item>@string/remedy_2</item>
        <item>@string/remedy_3</item>
        <item>@string/remedy_4</item>
        <item>@string/remedy_5</item>
    </string-array>

</resources>
