<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.borregobrothers.jrose.antibioticornot.MainQuestionnaireActivity">


    <LinearLayout
        android:id="@+id/feverInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/feverDialogTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fever_dialog_title_text"
            android:textSize="30sp"
            android:textColor="@color/colorBackground"
            android:textAlignment="center"
            android:padding="15dp"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/feverInfoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fever_info_text"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/feverInfoText"
            android:padding="10dp"
            android:gravity="center">

            <CheckBox
                android:id="@+id/lowFeverRangeCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/low_fever_range"
                android:textSize="20sp"
                android:buttonTint="@drawable/checkbox_edit"
                android:textColor="@drawable/checkbox_edit"/>

            <CheckBox
                android:id="@+id/highFeverRangeCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/high_fever_range"
                android:textSize="20sp"
                android:buttonTint="@drawable/checkbox_edit"
                android:textColor="@drawable/checkbox_edit"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/feverInfoContainer"
        android:padding="10dp">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button_text"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm_button_text"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"/>

    </LinearLayout>

</RelativeLayout>